Modification de l'architecture

--- a/static/header.html
+++ b/static/header.html
@@ -1,3 +1,47 @@
 <html>
+	<!-- dessus de la page, avec le menu -->
+	<header>
+	</header>
+	
+
+	<nav>
+		<ul>
+			<li>
+				<a href="../traitement/index.php">Accueil</a>
+			</li>
+			<li>
+				<a href="../traitement/Velos/velos.php">Velos</a>
+				<ul>
+					<li>
+						<a href="../traitement/Velos/vtt.php">VTT</a>
+					</li>
+					<li>
+						<a href="../traitement/Velos/vtc.php">VTC</a>
+					</li>
+					<li>
+						<a href="../traitement/Velos/velocourse.php">Vélo de Course</a>
+					</li>
+				</ul>
+			</li>
+			<li>
+				<a href="../traitement/reparations.php">Reparations</a>
+			</li>
+			<li>
+				<a href="../traitement/photos.php">Photos</a>
+			</li>
+			<li>
+				<a href="../traitement/calendrier.php">Calendrier</a>
+			</li>
+			<li>
+				<a href="../traitement/forum.php">Forum</a>
+			</li>
+			<li>
+				<a href="../traitement/register.php">S'inscrire</a>
+			</li>
+			<li>
+				<a href="../traitement/login.php">Se connecter</a>
+			</li>
+		</ul>
+	</nav>
 
 </html>
