--- a/static/menu.html
+++ b/static/menu.html
@@ -1,43 +1,91 @@
-<html>
+ <!DOCTYPE html>
+<html lang="fr">
+<head>
+	<title>Velocampus-- Official WebSite</title>
 	<meta content="charset=utf-8"/>
-	<nav>
-		<ul>
-			<li>
-				<a href="../">Accueil</a>
-			</li>
-			<li>
-				<a href="../traitement/velos.php">Velos</a>
-				<ul>
-					<li>
-						<a href="../traitement/vtt.php">VTT</a>
-					</li>
-					<li>
-						<a href="../traitement/vtc.php">VTC</a>
-					</li>
-					<li>
-						<a href="../traitement/velocourse.php">Vélo de Course</a>
-					</li>
-				</ul>
-			</li>
-			<li>
-				<a href="../traitement/reparations.php">Reparations</a>
-			</li>
-			<li>
-				<a href="../traitement/photos.php">Photos</a>
-			</li>
-			<li>
-				<a href="../traitement/calendrier.php">Calendrier</a>
-			</li>
-			<li>
-				<a href="../traitement/forum.php">Forum</a>
-			</li>
-			<li>
-				<a href="../traitement/register.php">S'inscrire</a>
-			</li>
-			<li>
-				<a href="../traitement/login.php">Se connecter</a>
-			</li>
-		</ul>
-	</nav>
+	<!-- On ouvre la fenêtre à la largeur de l'écran -->
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<!-- Intégration du CSS Bootstrap -->
+	<link href="bootstrap/css/bootstrap.css" rel="stylesheet" media="screen">
+	<link href="bootstrap/css/bootstrap-responsive.min.css" rel="stylesheet">
+</head>
+<body>
+	<div class="container"><!-- Conteneur principal -->
+		<div class="row"><!-- Premiere ligne -->
+			<div class="span12"><!-- Premiere colonne de taille de la page (12) -->
+				<!--  Carousel  : image en slide-->
+				<div id="this-carousel-id" class="carousel slide">
+ 					 <div class="carousel-inner">
+    					<div class="item active">
+      						<img src="images/velo.jpg" alt="" />
+      						<!--<div class="carousel-caption"><p>Afficher texte en dessous de l'image</p></div> -->
+    					</div>
+   						 <div class="item">
+      						<img src="images/velo.jpg" alt="" />
+    					</div>
+    					<div class="item">
+      						<img src="images/velo.jpg" alt="" />
+      					</div>
+      				</div><
+    				<a class="carousel-control left" href="#this-carousel-id" data-slide="prev">&lsaquo;</a>
+    				<a class="carousel-control right" href="#this-carousel-id" data-slide="next">&rsaquo;</a>
+				</div><!-- fin caroussel -->
+			</div><!-- fin colonne -->
+		</div><!-- fin ligne -->
+		<div class="row"><!--nouvelle ligne -->
+			<div class="span12">
+				<!-- Barre de navigation -->
+				<div class="navbar navbar-inverse">
+					<div class="navbar-inner">
+					<a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
+					<span class="icon-bar"></span><!-- liens pour site mobile -->
+					<span class="icon-bar"></span>
+					<span class="icon-bar"></span>
+					</a>
+				<a class="brand" href="#">Responsive Design</a>
+					<!-- Structure du menu -->
+					<div class="nav-collapse collapse">
+						<ul class="nav">
+							<li class="active"><a href="#">Accueil</a></li>
+								<li><a href="#">A propos</a></li>
+								<li><a href="#">Contactez-nous</a></li>
+									<li class="dropdown">
+										<a href="#" class="dropdown-toggle" data-toggle="dropdown">Menu deroulant<b class="caret"></b></a>
+										<ul class="dropdown-menu">
+											<li><a href="#">Action 1</a></li>
+											<li><a href="#">Action 2</a></li>
+											<li class="divider"></li>
+											<li class="nav-header">Autres liens</li>
+											<li><a href="#">Lien 1</a></li>
+											<li><a href="#">Lien 2</a></li>
+										</ul>
+									</li>
+						</ul>
+					</div>
+					</div>
+				</div>
+			</div>
+		</div>
 
+		<div class="row">
+	<div class="span4">span4</div>
+	<div class="span4">span4</div>
+	<div class="span4">span4</div>
+</div>
+<div class="row">
+	<div class="span7">span7</div>
+	<div class="span5">span5</div>
+</div>
+
+
+</div>
+
+
+<script src="//ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
+<script>window.jQuery || document.write('<script src="js/jquery-1.7.2.min.js"><\/script>')</script>
+<!-- Intégration de la libraire jQuery -->
+<script src="bootstrap/js/jquery-1.8.3.min.js"></script>
+<!-- Intégration de la libraire de composants du Bootstrap -->
+<script src="bootstrap/js/bootstrap.min.js"></script>
+</body>
 </html>
