--- a/footer.html
+++ b/footer.html
@@ -4,8 +4,8 @@
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
 <script>window.jQuery || document.write('<script src="js/jquery-1.7.2.min.js"><\/script>')</script>
 <!-- Intégration de la libraire jQuery -->
-<script src="bootstrap/js/jquery-1.8.3.min.js"></script>
+<script src="../bootstrap/js/jquery-1.8.3.min.js"></script>
 <!-- Intégration de la libraire de composants du Bootstrap -->
-<script src="bootstrap/js/bootstrap.min.js"></script>
+<script src="../bootstrap/js/bootstrap.min.js"></script>
 </body>
 </html>
