--- a/header.html
+++ b/header.html
@@ -6,8 +6,8 @@
 	<!-- On ouvre la fenêtre à la largeur de l'écran -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<!-- Intégration du CSS Bootstrap -->
-	<link href="bootstrap/css/bootstrap.css" rel="stylesheet" media="screen">
-	<link href="bootstrap/css/bootstrap-responsive.min.css" rel="stylesheet">
+	<link href="../bootstrap/css/bootstrap.css" rel="stylesheet" media="screen">
+	<link href="../bootstrap/css/bootstrap-responsive.min.css" rel="stylesheet">
 </head>
 <body>
 	<div class="container"><!-- Conteneur principal -->
@@ -17,14 +17,14 @@
 				<div id="this-carousel-id" class="carousel slide">
  					 <div class="carousel-inner">
     					<div class="item active">
-      						<img src="images/velo.jpg" alt="" />
+      						<img src="../images/velo.jpg" alt="" />
       						<!--<div class="carousel-caption"><p>Afficher texte en dessous de l'image</p></div> -->
     					</div>
    						 <div class="item">
-      						<img src="images/velo.jpg" alt="" />
+      						<img src="../images/velo.jpg" alt="" />
     					</div>
     					<div class="item">
-      						<img src="images/velo.jpg" alt="" />
+      						<img src="../images/velo.jpg" alt="" />
       					</div>
       				</div>
     				<a class="carousel-control left" href="#this-carousel-id" data-slide="prev">&lsaquo;</a>
