--- a/menu.html
+++ b/menu.html
@@ -13,7 +13,7 @@
 					<!-- Structure du menu -->
 					<div class=class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 						<ul class="nav navbar">
-							<a class="brand" href="../">Accueil</a>
+							<a class="brand" href="../acceuil/index.php">Accueil</a>
 								<li class="dropdown">
 										<a class="brand" href="../traitement/velos.php" class="dropdown-toggle" data-toggle="dropdown">Vélos<b class="caret"></b></a>
 											<ul class="dropdown-menu">
