--- a/menu.html
+++ b/menu.html
@@ -41,23 +41,10 @@
 		</div>
 
 		<div class="row">
-	<div class="span4">span4</div>
-	<div class="span4">span4</div>
-	<div class="span4">span4</div>
+	<div class="span4"></div>
+	<div class="span4"></div>
+	<div class="span4"></div>
 </div>
-<div class="row">
-	<div class="span7"><nav class="navbar navbar-default" role="navigation">
-   
 
-   <div class="collapse navbar-collapse  navbar-ex1-collapse">
-      <ul class="nav navbar-nav">
-         <li class="active"><a href="#">Link</a></li>
-         <li><a href="#">Link</a></li>
-         <li><a href="#">Link</a></li>
-      </ul>
-  </div>
-</nav></div>
-	<div class="span5">span5</div>
-</div>
 
 
