--- a/header.html
+++ b/header.html
@@ -8,6 +8,8 @@
 	<!-- Intégration du CSS Bootstrap -->
 	<link href="../bootstrap/css/bootstrap.css" rel="stylesheet" media="screen">
 	<link href="../bootstrap/css/bootstrap-responsive.min.css" rel="stylesheet">
+	<script src="../bootstrap/js/jquery.js"></script>
+	
 </head>
 <body>
 	<div class="container"><!-- Conteneur principal -->
