--- a/header.html
+++ b/header.html
@@ -15,7 +15,7 @@
 	<div class="container"><!-- Conteneur principal -->
 		
 		<div class="row"><!-- Premiere ligne -->
-			<div class="span12"><!-- Premiere colonne de taille de la page (12) -->
+			<div class="col-md-12"><!-- Premiere colonne de taille de la page (12) -->
 				<!--  Carousel  : image en slide-->
 				<div id="this-carousel-id" class="carousel slide">
  					 <div class="carousel-inner">
