--- a/menu.html
+++ b/menu.html
@@ -92,8 +92,8 @@
     </ul>
     
     <ul class="nav navbar-nav navbar-right">
-      <li><a href="#"><button type="button" class="btn btn-danger " >S'inscrire</button></a></li>
-      <li><a href="#"><button type="button" class="btn btn-warning " >Se connecter</button></a></li>
+      <li><a href="../traitement/register.php"><button type="button" class="btn btn-danger " >S'inscrire</button></a></li>
+      <li><a href="../traitement/login.php"><button type="button" class="btn btn-warning " >Se connecter</button></a></li>
       
     </ul>
   </div><!-- /.navbar-collapse -->
@@ -101,6 +101,9 @@
 </div>
 </div>
 </div>
+
+
+
 
 
 
