--- a/menu.html
+++ b/menu.html
@@ -120,21 +120,21 @@
     <div class="modal-content">
       <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-        <h4 class="modal-title" id="myModalLabel">Inscription</h4>
+        <h4 class="modal-title" id="myModalLabel" ><strong>Inscription</strong></h4>
       </div>
       <div class="modal-body">
 
         <form>
-        	Nom : <input type="text"></input><br/><br/>
-        	Prenom : <input type="text"></input><br/><br/>
-        	Adresse Mail : <input type="text"></input><br/><br/>
-        	Mot de passe : <input type="text"></input><br/><br/>
-        	Confirmer : <input type="text"></input>
+        	Nom : <input type="text" class="form-control" placeholder="Text input"><br/><br/>
+        	Prenom : <input type="text" class="form-control" placeholder="Text input"><br/><br/>
+        	Adresse Mail : <input type="email" class="form-control" id="inputEmail3" placeholder="Email"><br/><br/>
+        	Mot de passe : <input type="password" class="form-control" id="inputPassword3" placeholder="Password"><br/><br/>
+        	Confirmer :<input type="password" class="form-control" id="inputPassword3" placeholder="Password"></input>
         </form>
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-default" data-dismiss="modal">Fermer</button>
-        <button type="button" class="btn btn-primary">Valider</button>
+        <button type="button" class="btn btn-danger">Valider</button>
       </div>
     </div>
   </div>
@@ -152,13 +152,13 @@
       <div class="modal-body">
 
         <form>
-        	Adresse Mail : <input type="text"></input><br/><br/>
-        	Mot de passe : <input type="text"></input><br/><br/>
+        	Adresse Mail : <input type="email" class="form-control" id="inputEmail3" placeholder="Email"><br/><br/>
+        	Mot de passe :<input type="password" class="form-control" id="inputPassword3" placeholder="Password"><br/><br/>
         </form>
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-default" data-dismiss="modal">Fermer</button>
-        <button type="button" class="btn btn-primary">Se connecter</button>
+        <button type="button" class="btn btn-warning">Se connecter</button>
       </div>
     </div>
   </div>
