--- a/header.html
+++ b/header.html
@@ -21,14 +21,17 @@
  					 <div class="carousel-inner">
     					<div class="item active">
       						<img src="../images/velo.jpg" alt="" />
-      						<!--<div class="carousel-caption"><p>Afficher texte en dessous de l'image</p></div> -->
+      						<div class="carousel-caption"></div> 
     					</div>
    						 <div class="item">
-      						<img src="../images/velo.jpg" alt="" />
+      						<img src="../images/velo.jpg" alt="..." />
+      						<div class="carousel-caption"></div>
     					</div>
     					<div class="item">
       						<img src="../images/velo.jpg" alt="" />
+      						<div class="carousel-caption"></div>
       					</div>
+
       				</div>
     				<a class="carousel-control left" href="#this-carousel-id" data-slide="prev">&lsaquo;</a>
     				<a class="carousel-control right" href="#this-carousel-id" data-slide="next">&rsaquo;</a>
