--- a/menu.html
+++ b/menu.html
@@ -21,10 +21,10 @@
       <li><a class="navbar-brand" href="../traitement/calendrier.php"><h4>Calendrier</h4></a></li>
       <li><a class="navbar-brand" href="../traitement/reparations.php"><h4>Réparations</h4></a></li>
       <li class="dropdown">
-        <a href="#" class="navbar-brand dropdown-toggle" data-toggle="dropdown"><h4>Vélos<b class="caret"></b></h4></a>
+        <a href="#" class="navbar-brand dropdown-toggle" data-toggle="dropdown"><h4>Vélos <b class="caret"></b></h4></a>
         <ul class="dropdown-menu">
-          <li><a href="../traitement/velos.php">Vélos</a></li>
-          <li class="divider"></li>
+          <!-- <li><a href="../traitement/velos.php">Vélos</a></li> -->
+          <!-- <li class="divider"></li> -->
           <li><a href="../traitement/vtt.php">VTT</a></li>
           <li class="divider"></li>
           <li><a href="../traitement/vtc.php">VTC</a></li>
@@ -71,6 +71,7 @@
         	Adresse Mail : <input type="email" class="form-control" id="inputEmail3" placeholder="Email"><br/><br/>
         	Mot de passe : <input type="password" class="form-control" id="inputPassword3" placeholder="Password"><br/><br/>
         	Confirmer :<input type="password" class="form-control" id="inputPassword3" placeholder="Password"></input>
+          <!-- inputPassword4 pour la confirmation ? -->
         </form>
       </div>
       <div class="modal-footer">
@@ -95,6 +96,7 @@
         <form>
         	Adresse Mail : <input type="email" class="form-control" id="inputEmail3" placeholder="Email"><br/><br/>
         	Mot de passe :<input type="password" class="form-control" id="inputPassword3" placeholder="Password"><br/><br/>
+          <input type="checkbox" id="remindMe"> Se souvenir de moi
         </form>
       </div>
       <div class="modal-footer">
