--- a/header.html
+++ b/header.html
@@ -1,7 +1,7 @@
  <!DOCTYPE html>
 <html lang="fr">
 <head>
-	<title>Velocampus-- Official WebSite</title>
+	<title>VéloCampus - Official WebSite</title>
 	<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 	<!-- On ouvre la fenêtre à la largeur de l'écran -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -23,10 +23,14 @@
       						<img src="../images/velo.jpg" alt="" />
       						<div class="carousel-caption"></div> 
     					</div>
-   						 <div class="item">
+   						<div class="item">
       						<img src="../images/velo.jpg" alt="..." />
       						<div class="carousel-caption"></div>
     					</div>
+    					<div class="item">
+      						<img src="../images/velo.jpg" alt="" />
+      						<div class="carousel-caption"></div>
+      					</div>
     					<div class="item">
       						<img src="../images/velo.jpg" alt="" />
       						<div class="carousel-caption"></div>
