--- a/footer.html
+++ b/footer.html
@@ -15,9 +15,9 @@
  	color: #efefef;
  }
  .wrapper {
- 	min-height: 100%;
+ 	min-height: 20%;
  	height: auto !important;
- 	height: 100%;
+ 	/*height: 100%;*/
  	margin: 0 auto -63px;
  }
  .push {
