--- a/footer.html
+++ b/footer.html
@@ -1,44 +1,19 @@
-<style>
- html, body {
- 	height: 100%;
- }
- footer {
- 	color: #666;
- 	background: #222;
- 	padding: 17px 0 18px 0;
- 	border-top: 1px solid #000;
- }
- footer a {
- 	color: #999;
- }
- footer a:hover {
- 	color: #efefef;
- }
- .wrapper {
- 	min-height: 20%;
- 	height: auto !important;
- 	/*height: 100%;*/
- 	margin: 0 auto -63px;
- }
- .push {
- 	height: 63px;
- }
- .wrapper > .container {
- 	padding-top: 60px;
- }
- </style>
-</head>
-<body>
-	<div class="wrapper">
+
+<div class="row">
+    <div class="col-md-12">
+    	<center>
+			<div id="footer">
+				<div class="panel-footer">
+				<p><a href="https://www.facebook.com/velocampus.montbeliard?fref=browse_search"><img src="http://www.doubled-martialarts.com/images/icon_logo_facebook.gif?1272020681"></img></a> <a href="https://twitter.com/VelocampusLion"><img src="http://t3.gstatic.com/images?q=tbn:ANd9GcQCr0jmHGtIEEPqPkTfEGp1A6phYBOhTDGc2ueNV5604vQzErLUTsW7lkU"></img></a>  Copyright © 2014 VéloCampus | Tous droits réservés. <a href="http://www.meatspin.cc">Test de lien vers google</a></p>
+				</div>
+			</div>
+		</center>
 	</div>
-	<footer>
-		<div class="container">
-			<p><a href="https://www.facebook.com/velocampus.montbeliard?fref=browse_search"><img src="http://www.doubled-martialarts.com/images/icon_logo_facebook.gif?1272020681"></img></a> <a href="https://twitter.com/VelocampusLion"><img src="http://t3.gstatic.com/images?q=tbn:ANd9GcQCr0jmHGtIEEPqPkTfEGp1A6phYBOhTDGc2ueNV5604vQzErLUTsW7lkU"></img></a>  Copyright © 2014 VéloCampus | Tous droits réservés. <a href="http://www.meatspin.cc">Test de lien vers google</a></p>
-		</div>
-	</footer>
-
-
 </div>
+
+
+
+</div> <!-- fin container !!!!!!! -->
 
 
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
