--- a/menu.html
+++ b/menu.html
@@ -35,14 +35,14 @@
     <ul class="nav navbar-nav navbar-right">
       <li>
       	<a href="#">
-      		<button type="button" class="btn btn-danger" data-toggle="modal" data-target="#modalInscription">
+      		<button type="button" class="btn btn-info" data-toggle="modal" data-target="#modalInscription">
       			S'inscrire
       		</button>
       	</a>
       </li>
       <li>
       	<a href="#">
-      		<button type="button" class="btn btn-warning" data-toggle="modal" data-target="#modalConnnexion">
+      		<button type="button" class="btn btn-success" data-toggle="modal" data-target="#modalConnnexion">
       			Se connecter
       		</button>
       	</a>
@@ -52,6 +52,23 @@
 </nav>
 </div>
 </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 <!-- Modal Inscription -->
@@ -75,7 +92,7 @@
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-default" data-dismiss="modal">Fermer</button>
-        <button type="button" class="btn btn-danger">Valider</button>
+        <button type="button" class="btn btn-info">Valider</button>
       </div>
     </div>
   </div>
@@ -100,7 +117,7 @@
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-default" data-dismiss="modal">Fermer</button>
-        <button type="button" class="btn btn-warning">Se connecter</button>
+        <button type="button" class="btn btn-success">Se connecter</button>
       </div>
     </div>
   </div>
