--- a/header.html
+++ b/header.html
@@ -18,6 +18,14 @@
 			<div class="col-md-12"><!-- Premiere colonne de taille de la page (12) -->
 				<!--  Carousel  : image en slide-->
 				<div id="this-carousel-id" class="carousel slide">
+
+<ol class="carousel-indicators">
+    <li data-target="#this-carousel-id" data-slide-to="0" class="active"></li>
+    <li data-target="#this-carousel-id" data-slide-to="1"></li>
+    <li data-target="#this-carousel-id" data-slide-to="2"></li>
+    <li data-target="#this-carousel-id" data-slide-to="3"></li>
+  </ol>
+
  					 <div class="carousel-inner">
     					<div class="item active">
       						<img src="../images/velo.jpg" alt="" />
@@ -37,8 +45,9 @@
       					</div>
 
       				</div>
-    				<a class="carousel-control left" href="#this-carousel-id" data-slide="prev">&lsaquo;</a>
-    				<a class="carousel-control right" href="#this-carousel-id" data-slide="next">&rsaquo;</a>
+    				<a class="carousel-control left" href="#this-carousel-id" data-slide="prev"><span class="glyphicon glyphicon-chevron-left"></span></a>
+           
+    				<a class="carousel-control right" href="#this-carousel-id" data-slide="next"><span class="glyphicon glyphicon-chevron-right"></span></a>
 				</div><!-- fin caroussel -->
 			</div><!-- fin colonne -->
 		</div><!-- fin ligne -->
