--- a/header.html
+++ b/header.html
@@ -28,19 +28,19 @@
 
  					 <div class="carousel-inner">
     					<div class="item active">
-      						<img src="../images/velo.jpg" alt="" />
+      						<img src="../images/velo1.jpg" alt="" />
       						<div class="carousel-caption"></div> 
     					</div>
    						<div class="item">
-      						<img src="../images/velo.jpg" alt="..." />
+      						<img src="../images/velo2.jpg" alt="..." />
       						<div class="carousel-caption"></div>
     					</div>
     					<div class="item">
-      						<img src="../images/velo.jpg" alt="" />
+      						<img src="../images/velo3.jpg" alt="" />
       						<div class="carousel-caption"></div>
       					</div>
     					<div class="item">
-      						<img src="../images/velo.jpg" alt="" />
+      						<img src="../images/velo4.jpg" alt="" />
       						<div class="carousel-caption"></div>
       					</div>
 
