--- a/menu.html
+++ b/menu.html
@@ -68,10 +68,9 @@
         <form>
         	Nom : <input type="text" class="form-control" placeholder="Text input"><br/><br/>
         	Prenom : <input type="text" class="form-control" placeholder="Text input"><br/><br/>
-        	Adresse Mail : <input type="email" class="form-control" id="inputEmail3" placeholder="Email"><br/><br/>
-        	Mot de passe : <input type="password" class="form-control" id="inputPassword3" placeholder="Password"><br/><br/>
-        	Confirmer :<input type="password" class="form-control" id="inputPassword3" placeholder="Password"></input>
-          <!-- inputPassword4 pour la confirmation ? -->
+        	Adresse Mail : <input type="email" class="form-control" id="inputEmail" placeholder="Email"><br/><br/>
+        	Mot de passe : <input type="password" class="form-control" id="inputPassword" placeholder="Password"><br/><br/>
+        	Confirmer : <input type="password" class="form-control" id="inputPassword" placeholder="Password"></input>
         </form>
       </div>
       <div class="modal-footer">
@@ -91,18 +90,17 @@
         <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
         <h4 class="modal-title" id="myModalLabel"><strong>Connexion</strong></h4>
       </div>
-      <div class="modal-body">
-
-        <form>
-        	Adresse Mail : <input type="email" class="form-control" id="inputEmail3" placeholder="Email"><br/><br/>
-        	Mot de passe :<input type="password" class="form-control" id="inputPassword3" placeholder="Password"><br/><br/>
+      <form method="post" action="../traitement/login.php">
+        <div class="modal-body">
+        	Adresse Mail : <input type="email" class="form-control" id="inputEmail" name="inputEmail" placeholder="Email"><br/><br/>
+        	Mot de passe : <input type="password" class="form-control" id="inputPassword" name="inputPassword" placeholder="Password"><br/><br/>
           <input type="checkbox" id="remindMe"> Se souvenir de moi
-        </form>
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-default" data-dismiss="modal">Fermer</button>
-        <button type="button" class="btn btn-success">Se connecter</button>
-      </div>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-default" data-dismiss="modal">Fermer</button>
+          <button type="submit" class="btn btn-success">Se connecter</button>
+        </div>
+      </form>
     </div>
   </div> 
 </div>
