--- a/menulog.html
+++ b/menulog.html
@@ -34,7 +34,7 @@
     <ul class="nav navbar-nav navbar-right">
       <li>
         <a href="#">
-          <button type="button" class="btn btn-danger" data-toggle="modal" data-target="#modalConnnexion">
+          <button type="button" class="btn btn-danger" data-toggle="modal" data-target="#modalDeconnnexion">
             Se déconnecter
           </button>
         </a>
@@ -46,54 +46,20 @@
 </div>
 
 
-
-<!-- Modal Inscription -->
-<div class="modal fade" id="modalInscription" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+<!-- Modal Déconnexion -->
+<div class="modal fade" id="modalDeconnnexion" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-        <h4 class="modal-title" id="myModalLabel" ><strong>Inscription</strong></h4>
+        <h4 class="modal-title" id="myModalLabel"><strong>Déconnexion</strong></h4>
       </div>
       <div class="modal-body">
-
-        <form>
-          Nom : <input type="text" class="form-control" placeholder="Text input"><br/><br/>
-          Prenom : <input type="text" class="form-control" placeholder="Text input"><br/><br/>
-          Adresse Mail : <input type="email" class="form-control" id="inputEmail3" placeholder="Email"><br/><br/>
-          Mot de passe : <input type="password" class="form-control" id="inputPassword3" placeholder="Password"><br/><br/>
-          Confirmer :<input type="password" class="form-control" id="inputPassword3" placeholder="Password"></input>
-          <!-- inputPassword4 pour la confirmation ? -->
-        </form>
+        Êtes-vous sûr de vouloir vous déconnecter ?
       </div>
       <div class="modal-footer">
-        <button type="button" class="btn btn-default" data-dismiss="modal">Fermer</button>
-        <button type="button" class="btn btn-info">Valider</button>
-      </div>
-    </div>
-  </div>
-</div>
-
-
-<!-- Modal Connexion -->
-<div class="modal fade" id="modalConnnexion" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-  <div class="modal-dialog">
-    <div class="modal-content">
-      <div class="modal-header">
-        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-        <h4 class="modal-title" id="myModalLabel"><strong>Connexion</strong></h4>
-      </div>
-      <div class="modal-body">
-
-        <form>
-          Adresse Mail : <input type="email" class="form-control" id="inputEmail3" placeholder="Email"><br/><br/>
-          Mot de passe :<input type="password" class="form-control" id="inputPassword3" placeholder="Password"><br/><br/>
-          <input type="checkbox" id="remindMe"> Se souvenir de moi
-        </form>
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-default" data-dismiss="modal">Fermer</button>
-        <button type="button" class="btn btn-success">Se connecter</button>
+        <button type="button" class="btn btn-default" data-dismiss="modal">Annuler</button>
+        <button type="button" class="btn btn-danger" onclick="document.location.href='../traitement/logout.php'">Se déconnecter</button>
       </div>
     </div>
   </div> 
