--- a/menu.html
+++ b/menu.html
@@ -10,7 +10,7 @@
       <span class="icon-bar"></span>
       <span class="icon-bar"></span>
     </button>
-    <a class="navbar-brand" href="../acceuil/index.php"><h4>Accueil</h4></a>
+    <a class="navbar-brand" href="../accueil/index.php"><h4>Accueil</h4></a>
 
   </div>
 
