Réglages du carousel

--- a/header.html
+++ b/header.html
@@ -52,3 +52,10 @@
     </div><!-- fin caroussel -->
     </div><!-- fin colonne -->
   </div><!-- fin ligne -->
+  <script type='text/javascript'>
+    $(document).ready(function() {
+         $('.carousel').carousel({
+             interval: 4000
+         })
+    });    
+  </script>
