Creation du cookie (inutile ?)

--- a/menu.html
+++ b/menu.html
@@ -100,7 +100,7 @@
         <div class="modal-body">
         	Adresse Mail : <input type="email" class="form-control" id="inputEmail" name="inputEmail" placeholder="Email" required/><br/><br/>
         	Mot de passe : <input type="password" class="form-control" id="inputPassword" name="inputPassword" placeholder="Password" required/><br/><br/>
-          <input type="checkbox" id="remindMe"> Se souvenir de moi
+          <input type="checkbox" id="remindMe" name="remindMe"> Se souvenir de moi
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-default" data-dismiss="modal">Fermer</button>
