Création de la page moncompte.php

--- a/menulog.html
+++ b/menulog.html
@@ -20,18 +20,10 @@
       <li><a class="navbar-brand" href="../traitement/photos.php"><h4>Photos</h4></a></li>
       <li><a class="navbar-brand" href="../traitement/calendrier.php"><h4>Calendrier</h4></a></li>
       <li><a class="navbar-brand" href="../traitement/reparations.php"><h4>Réparations</h4></a></li>
-      <li class="dropdown">
-        <a href="#" class="navbar-brand dropdown-toggle" data-toggle="dropdown"><h4>Vélos <b class="caret"></b></h4></a>
-        <ul class="dropdown-menu">
-          <!-- <li><a href="../traitement/velos.php">Vélos</a></li> -->
-          <!-- <li class="divider"></li> -->
-          <li><a href="../traitement/vtt.php">VTT</a></li>
-          <li class="divider"></li>
-          <li><a href="../traitement/vtc.php">VTC</a></li>
-        </ul>
-      </li>
+      <li><a class="navbar-brand" href="../traitement/velos.php"><h4>Vélos</h4></a></li>
     </ul>
     <ul class="nav navbar-nav navbar-right">
+      <li><a class="navbar-brand" href="../traitement/moncompte.php"><h4>Mon compte</h4></a></li>
       <li>
         <a href="#">
           <button type="button" class="btn btn-danger" data-toggle="modal" data-target="#modalDeconnnexion">
