Icones fb et twitter

--- a/footer.html
+++ b/footer.html
@@ -4,7 +4,17 @@
     	<center>
 			<div id="footer">
 				<div class="panel-footer">
-				<p><a href="https://www.facebook.com/velocampus.montbeliard?fref=browse_search"><img src="http://www.doubled-martialarts.com/images/icon_logo_facebook.gif?1272020681"></img></a> <a href="https://twitter.com/VelocampusLion"><img src="http://t3.gstatic.com/images?q=tbn:ANd9GcQCr0jmHGtIEEPqPkTfEGp1A6phYBOhTDGc2ueNV5604vQzErLUTsW7lkU"></img></a>  Copyright © 2014 VéloCampus | Tous droits réservés.</p>
+					<!-- <p> -->
+						<a href="https://www.facebook.com/velocampus.montbeliard?fref=browse_search">
+							<img src="../images/facebook.png" width="20" height="20">
+							</img>
+						</a> 
+						<a href="https://twitter.com/VelocampusLion">
+							<img src="../images/twitter.png" width="20" height="20">
+							</img>
+						</a>  
+						Copyright © 2014 VéloCampus | Tous droits réservés.
+					<!-- </p> -->
 				</div>
 			</div>
 		</center>
