Ajout des images user dans la bdd + utilisation cookie dans l'index

--- a/footer.html
+++ b/footer.html
@@ -5,15 +5,15 @@
 			<div id="footer">
 				<div class="panel-footer">
 					<!-- <p> -->
-						<a href="https://www.facebook.com/velocampus.montbeliard?fref=browse_search">
+						<a href="https://www.facebook.com/VelocampusDuLion" onclick="window.open(this.href); return false;">
 							<img src="../images/facebook.png" width="20" height="20">
 							</img>
 						</a> 
-						<a href="https://twitter.com/VelocampusLion">
+						<a href="https://twitter.com/VelocampusLion" onclick="window.open(this.href); return false;">
 							<img src="../images/twitter.png" width="20" height="20">
 							</img>
 						</a>  
-						Copyright © 2014 VéloCampus | Tous droits réservés.
+						- Copyright © 2014 VéloCampus | Tous droits réservés.
 					<!-- </p> -->
 				</div>
 			</div>
