--- a/Admin/menu.html
+++ b/Admin/menu.html
@@ -5,7 +5,7 @@
       </div>
       <form method="post" action="../traitement/login.php">
         <div class="modal-body">
-          Pseudo : <input type="text" class="form-control" id="inputEmail" name="inputEmail" placeholder="Email" required/><br/><br/>
+          Pseudo : <input type="text" class="form-control" id="inputPseudo" name="inputPseudo" placeholder="Text" required/><br/><br/>
           Mot de passe : <input type="password" class="form-control" id="inputPassword" name="inputPassword" placeholder="Password" required/><br/><br/>
           <input type="checkbox" id="remindMe" name="remindMe"> Se souvenir de moi
         </div>
@@ -18,6 +18,6 @@
     </div>
 </div>
 
-<!-- Modal Connexion -->
+
 
       
