--- a/Admin/menulog.html
+++ b/Admin/menulog.html
@@ -55,7 +55,7 @@
     </div>
     <div class="col-md-6" >
 
-        <img src="../images/postit.png"  width="600" height="600"  style="position:absolute;z-index:1">
+        <img src="../images/postit.png"  width="600" height="600"  style="position:absolute;z-index:1" class="img-responsive">
 
         <div class="row"><br/><br/><br/><br/><br/>
             <div class="col-md-9 col-md-offset-2" style="position:absolute;z-index:2">
@@ -76,15 +76,16 @@
 
                 <div class="row">
                     <div class="col-md-20 " style="position:absolute;z-index:3">
-                        <form class="form-inline" role="form" method="post" action="../traitement/postit.php">
+                        <form class="form-inline" role="form" method="POST" action="../traitement/postit.php">
                             <div class="form-group">
                                 <label class="sr-only">nom</label>
-                                <input type="text" class="form-control" id="nom" placeholder="Pseudo" >
+                                <textarea cols="15" rows="1" class="form-control" id="nom" name="nom" placeholder="Pseudo"></textarea>
+                                <!-- <input type="text" class="form-control" id="nom" name="nom "placeholder="Pseudo" > -->
                             </div>
                             <div class="form-group">
                                 <label class="sr-only">mess</label>
-                                <!--<input type="text" class="form-control" id="mess" placeholder="Message">--!>
-              <textarea cols="50" rows="4" id="mess" placeholder="Message"></textarea>
+                                <!-- <input type="text" class="form-control" id="mess" placeholder="Message"> -->
+              <textarea cols="50" rows="4" class="form-control" id="mess" name="mess" placeholder="Message"></textarea>
             </div>
 
               <button type="submit" class="btn btn-default">send</button>
